# mcp-server-sample

./: .gitignore  README.md  pyproject.toml  tool_list.yaml
sse_server/: server.py
tools/: weather.py
